@@ -1,5 +1,7 @@
 #include "Client.h"
 
+uint8_t Client::m_buffer[NGINE_SOCKET_BUFFER]; //Static
+
 Client::Client() : ACE_Event_Handler(), m_stream(), m_session(m_stream) {
 	std::cout << "[Client] New client joined!\n";
 }
@@ -19,8 +21,22 @@ ACE_HANDLE Client::get_handle() const {
 }
 
 int Client::handle_input(ACE_HANDLE handle) {
-    std::cout << "[Client] Data received.\n";
-	return Dispatcher::getInstance(m_session)->test();
+    int received; //no need to initialize, will be set below
+	while ((received = m_session.socket.recv(&m_buffer, NGINE_SOCKET_BUFFER)) > 0) {
+		Packet input(m_buffer, received);
+		m_session.buffer.appendPacket(input);
+		std::cout << "Input: ";
+		m_session.buffer.printHex();
+		std::cout << "\n";
+	}
+	return (!received ? -1 : 0); //when !received, peer disconnected, return -1.
+	/*
+	unsigned char response = 'K';
+	if (m_session->socket.send_n(&response, sizeof(response), &connTimeout) != 1) {
+		std::cerr << "[Dispatcher] Failed to send test byte." << std::endl;
+	}
+	return 0;
+	*/
 }
 
 int Client::handle_close(ACE_HANDLE, ACE_Reactor_Mask) {
