@@ -6,6 +6,7 @@ N/A
 - Verify the signal handling system (I think it doesn't free up memory gracefully, normal or not?)
 - A configuration file that override config.h default settings when needed
 - Allow parameters for main() that override that configuration file.
+- Optimize Packet class (with references, better functions and stuff)
 
 [Protocol]
 N/A
